Fixed alignment

--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -1,5 +1,4 @@
 .footer {
-	margin-top: 2rem;
 	background: $primary-color;
 	color: $light-color;
 	padding: 40px 20px;
@@ -18,7 +17,6 @@
 
 	@media (max-width: 700px) {
 		flex-direction: column;
-		align-items: center;
 	}
 }
 
@@ -26,34 +24,30 @@
 	flex: 1;
 	display: flex;
 	flex-direction: column;
+	text-align: left;
+	align-items: flex-start;
+
 	h3 {
 		font-size: 1.2rem;
 		margin-bottom: 15px;
 		color: $light-color;
 	}
 
-	@media (max-width: 768px) {
-		text-align: center;
+	@media screen and (min-width: 700px) {
+		align-items: center;
 	}
 }
 
 .footer-logo {
+	align-self: flex-start;
 	width: 150px;
-	align-self: center;
-
-	@media screen and (min-width: 700px) {
-		align-self: flex-start;
-	}
 }
 
 .footer-description {
 	font-size: 0.9rem;
 	line-height: 1.5;
 	margin-bottom: 15px;
-
-	@media screen and (min-width: 700px) {
-		text-align: left;
-	}
+	text-align: left;
 }
 
 .copyright {
@@ -66,10 +60,6 @@
 	li {
 		margin-bottom: 10px;
 		text-align: left;
-
-		@media screen and (min-width: 700px) {
-			transform: translateX(40%);
-		}
 	}
 
 	a {
