--- a/style/style.scss
+++ b/style/style.scss
@@ -458,6 +458,7 @@
 	max-width: none;
 	width: 100%;
 	padding: 0;
+	margin-bottom: 0;
 }
 .about-us-container {
 	justify-items: center;
